odh-kfp-seldon/manifests/odh/ds-pipeline-ui-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ds-pipeline-ui
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: http
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: pipeline
      protocol: TCP
      port: 3000
      targetPort: 3000
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: ds-pipeline-ui
    application-crd-id: kubeflow-pipelines
