odh-kfp-seldon/manifests/odh/ds-pipeline-ui-http-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ds-pipeline-ui-http
spec:
  to:
    kind: Service
    name: ds-pipeline-ui
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
